# mlops-tagifai

./: .pre-commit-config.yaml  Makefile  README.md  prefect.yaml  pyproject.toml
config/: args.json  config.py  performance.json  run_id.txt
data/: .gitignore  test_labeled_projects.csv
notebooks/: evidently.ipynb  tagifai.ipynb
src/pipelines/: data.py  evaluate.py  main.py  predict.py  train.py
src/utils/: utils.py
stores/model/422391208441768316/: meta.yaml
stores/model/422391208441768316/78a58e0ca08746a2b2dfac7df8889d0f/: meta.yaml
stores/model/889025912750143693/: meta.yaml
stores/model/889025912750143693/00033d1aba5d413f83967cecbe0efe5d/: meta.yaml
stores/model/889025912750143693/42c6b149133a427ea8bf89f716754474/: meta.yaml
stores/model/889025912750143693/51b1cd84980c412282cd14addd3dddc3/: meta.yaml
stores/model/889025912750143693/8544ba8fa8794d93b57e920dfa6af5e1/: meta.yaml
stores/model/889025912750143693/8958ec0a77344674b41502140fa0aa56/: meta.yaml
stores/model/889025912750143693/8c3206df8bbb4dbcaa8a53d067428562/: meta.yaml
stores/model/889025912750143693/9a90598a00aa45d1931c9cb47059e8fc/: meta.yaml
stores/model/889025912750143693/a9660f972e6c4f119cba7dc86866c85e/: meta.yaml
stores/model/889025912750143693/afd143f8feb14614b514db79d81851bc/: meta.yaml
stores/model/889025912750143693/be608fe93051484fa43f9c7b2be1c2e4/: meta.yaml
stores/model/889025912750143693/d30b899591744211825e746489247fc2/: meta.yaml
tests/code/: test_data.py  test_evaluate.py  test_main.py  test_predict.py  test_utils.py
tests/model/: test_behavioral.py
(+148 files in other folders)
