[tool.poetry]
name = "mlops-tagifai"
version = "0.1.0"
description = ""
authors = ["Hong Thai Ngo <ngohongthai.uet@gmail.com>"]
packages = [
	{ include = "src"},
	{ include = "config"}
]

[tool.poetry.dependencies]
python = "^3.9.12"
pdoc3 = "^0.10.0"
notebook = "^6.4.10"
prefect = "^2.7.6"
scikit-learn = "^1.2.0"
pandas = "^1.5.2"
prefect-jupyter = "^0.2.0"
interrogate = "^1.5.0"
joblib = "^1.2.0"
mlflow = "^2.4.1"
optuna = "^3.2.0"
numpyencoder = "^0.3.0"
nltk = "^3.8.1"
imblearn = "^0.0"
snorkel = "^0.9.9"


[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build   
)/ 
'''
